inserimento immagini e scritta nell header

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
       <!-- contentiore della pagina -->
     <div class="page">
       <header>
+        <div class="immagine">
+          <img src="img/sfondoheader.png" alt="">
+          <div class="immagine2">
+            <img src="img/natural.png" alt="">
+            <h1>another beautiful organic theme</h1>
+
+          </div>
+
+        </div>
       </header>
       <!-- struttura centrale e float -->
         <div class="clearfix">
