--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="page">
       <header>
         <div class="immagine">
-          <img src="img/sfondoheader.png" alt="">
+          <img class="dimensioni"src="img/sfondoheader.png" alt="">
           <div class="immagine2">
             <img src="img/natural.png" alt="">
             <h1>another beautiful organic theme</h1>
