--- a/index.html
+++ b/index.html
@@ -14,10 +14,22 @@
           <div class="immagine2">
             <img src="img/natural.png" alt="">
             <h1>another beautiful organic theme</h1>
+          </div>
+        </div>
+        <nav>
+          <div class="opzioni">
+            <ul>
+              <li>home</li>
+              <li>about</li>
+              <li>page templates</li>
+              <li>a parent page</li>
+              <li>features</li>
+              <li>blog</li>
+              <li>contact</li>
+            </ul>
 
           </div>
-
-        </div>
+        </nav>
       </header>
       <!-- struttura centrale e float -->
         <div class="clearfix">
