primo blocco  inserimento img e creazione dei tre blocchi laterali

--- a/index.html
+++ b/index.html
@@ -34,21 +34,35 @@
       <!-- struttura centrale e float -->
         <div class="clearfix">
           <div class="left box1">
+            <div class="contimmag">
+           <img class="icon" src="img/icona.png" alt="">
+            </div>
+            <div class="contitem">
+           <span class="item">ORGANIC<br>THEAMES</span>
+             </div>
+             <p>ciao a tutti</p><br>
+             <p>ciao a tutti</p><br>
+             <p>ciao a tutti</p><br>
+             <p>ciao a tutti</p><br>
+             <p>ciao a tutti</p><br>
           </div>
           <div class="left box2">
           </div>
-          <div class="special">
           <div class="left box3">
-            adele
+           <div class="left box4"></div>
+           <div class="left box5"></div>
+           <div class="left box6"></div>
+
+
+
+
           </div>
-          <div class="left box4">
-            recubini
-          </div>
-          </div>
-        </div>
+           </div>
+      </div>
+
       <!-- fine struttura centrale e float -->
       <footer></footer>
-    </div>
+
       <!--fine  contenitore della pagina  -->
   </body>
 </html>
