--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title></title>
     <link rel="stylesheet" href="css/style.css">
   </head>
+  <div class="sfondo">
+
+
   <body>
       <!-- contentiore della pagina -->
     <div class="page">
@@ -47,22 +50,32 @@
              <p>ciao a tutti</p><br>
           </div>
           <div class="left box2">
+            <h2>THREE COLUMN</h2><br>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
           <div class="left box3">
-           <div class="left box4"></div>
-           <div class="left box5"></div>
-           <div class="left box6"></div>
-
-
-
-
+           <div class="left box4">
+             <h3>PRIMA COLONNA</h3><br>
+             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+           </div>
+           <div class="left box5">
+           <h3>SECONDA COLONNA</h3><br>
+           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+           </div>
+           <div class="left box6">
+             <h3>terza colonna</h3><br>
+             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+           </div>
           </div>
            </div>
-      </div>
-
       <!-- fine struttura centrale e float -->
-      <footer></footer>
+      <footer>
+        <h4>pagina by Ado</h4>
+        <hr>
+      </footer>
 
+    </div>
       <!--fine  contenitore della pagina  -->
   </body>
+</div>
 </html>
