--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
   </head>
   <body>
 
+  <img class="sfondo" src="img/sfondo.png" alt="">
       <!-- contentiore della pagina -->
-    <div class="page">
-    
+
+       <div class="page">
       <header>
+
         <div class="immagine">
           <img class="dimensioni"src="img/sfondoheader.png" alt="">
           <div class="immagine2">
