fine esercizio e inserimento icone footer

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-
-  <img class="sfondo" src="img/sfondo.png" alt="">
+     <!-- immagine di sfondo  -->
+     <img class="sfondo" src="img/sfondo.png" alt="">
       <!-- contentiore della pagina -->
 
-       <div class="page">
+   <div class="page">
       <header>
-
+        <!-- intestazione -->
         <div class="immagine">
           <img class="dimensioni"src="img/sfondoheader.png" alt="">
           <div class="immagine2">
@@ -31,10 +31,10 @@
               <li>blog</li>
               <li>contact</li>
             </ul>
-
           </div>
         </nav>
       </header>
+      <!-- fine intestazione -->
       <!-- struttura centrale e float -->
         <div class="clearfix">
           <div class="left box1">
@@ -70,11 +70,23 @@
           </div>
            </div>
       <!-- fine struttura centrale e float -->
+      <!-- footer e inserimento icone -->
       <footer>
         <h4>pagina by Ado</h4>
         <hr>
+        <div class="immaginifooter">
+          <div class="fb">
+            <img class="facebook"src="img/facebook-logo.jpg" alt="">
+          </div>
+          <div class="ig">
+            <img class="instagram"src="img/instagram-logo.jpg" alt="">
+          </div>
+          <div class="github">
+            <img class="git"src="img/github-logo.jpg" alt="">
+          </div>
+        </div>
       </footer>
-
+      <!-- fine footer e inserimento cione -->
     </div>
       <!--fine  contenitore della pagina  -->
   </body>
